[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/pngkit_playing-cards-png_681003.png" type="Texture" id=1]
[ext_resource path="res://scripts/cards_kinematic.gd" type="Script" id=2]

[sub_resource type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35, 49.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 49.5 )

[node name="KinematicBody2D" type="KinematicBody2D" groups=["cards"]]
position = Vector2( 58, 61 )
collision_layer = 2
input_pickable = true
script = ExtResource( 2 )

[node name="FrontControl" type="Control" parent="."]
margin_right = 56.0
margin_bottom = 80.0
rect_min_size = Vector2( 56, 80 )
mouse_filter = 2
mouse_default_cursor_shape = 2
theme = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="FrontControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 14.0
rect_min_size = Vector2( 70, 100 )
mouse_filter = 2
expand = true

[node name="BackControl" type="Control" parent="."]
margin_right = 56.0
margin_bottom = 80.0
rect_min_size = Vector2( 56, 80 )
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="BackControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -5.0
rect_min_size = Vector2( 70, 100 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 32, 48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3, 1.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 35, 49.5 )
shape = SubResource( 4 )

[connection signal="input_event" from="." to="." method="_on_KinematicBody2D_input_event"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
